changes in prompt

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>buid your own pet</title>
 </head>
+<style>
+
+</style>
 <body>
-    
+    <!-- <h1>Welcome to My Virtual Pet </h1> -->
 
 
 
