--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>buid your own pet</title>
+    <title>Build Your Own Pet</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
     <div class="centered-text">
-        <h1>Welcome to My Virtual Pet </h1>
+        <h1>Welcome to My Virtual Pet</h1>
+        <button onclick="startGame()" >Start Game</button>
     </div>
-    
 
-
-
-
+    <!-- Custom Alert Box -->
+    <div id="custom-alert" class="custom-alert">
+        <div class="alert-content">
+            <span id="alert-message"></span>
+            <img id="alert-image" src="" alt="Alert Image" />
+            <button id="close-alert">Close</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
