--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <div class="centered-text">
         <h1>Welcome to My Virtual Pet</h1>
-        <button onclick="startGame()" >Start Game</button>
+        <button onclick="startGame()" >START</button>
     </div>
 
     <!-- Custom Alert Box -->
     <div id="custom-alert" class="custom-alert">
         <div class="alert-content">
             <span id="alert-message"></span>
-            <img id="alert-image" src="" alt="Alert Image" />
+            <img id="alert-image"  alt="Alert Image" />
             <button id="close-alert">Close</button>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
