--- a/index.html
+++ b/index.html
@@ -3,24 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Build Your Own Pet</title>
+    <title>Virtual Pet Game</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <div class="centered-text">
-        <h1>Welcome to My Virtual Pet</h1>
-        <button onclick="startGame()" >START</button>
-    </div>
-
-    <!-- Custom Alert Box -->
-    <div id="custom-alert" class="custom-alert">
-        <div class="alert-content">
-            <span id="alert-message"></span>
-            <img id="alert-image"  alt="Alert Image" />
-            <button id="close-alert">Close</button>
+    <body>
+        <div class="centered-text">
+            <h1>Welcome to My Virtual Pet</h1>
+            <button onclick="startGame()">START</button>
         </div>
-    </div>
-
-    <script src="./script.js"></script>
-</body>
+<script src="./script.js"></script>
+        </body>
 </html>
